02-kubernetes/Application E-commerce/k8s/05-redis/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
  labels:
    app: redis
    env: lab
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Egress
    - Ingress
  egress:
    #DNS rule
    - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53

  ingress:
    #Backend rule
    - from: 
      - podSelector:
          matchLabels:
            app: backend
      ports:
      - protocol: TCP
        port: 6379
